deploy/sites/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      targetPort: http
